Fix position of cover slide.
When using a different slide size (such as 1280x1024), the cover-page slide
is not centered in normal (non-fullscreen) mode.

--- a/css/_cover-page.scss
+++ b/css/_cover-page.scss
@@ -7,6 +7,7 @@
         $top-margin: $left-margin * 4 / 3;
         $width: 100% - (2 * $left-margin);
         $y-offset: $top-margin * 100% / (100% - $bg-height);
+        margin: 0;
 
         background:
             url(../images/SUSE/cover-slide-green-partial-bg.png)
